OTF updated calcs

--- a/ic342_mass_sensitivity_calcs.ipynb
+++ b/ic342_mass_sensitivity_calcs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c40a193c-c1e6-45d1-ab26-750fe3383b42",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "365cbf4a-196e-413b-9ac7-d6a18d6834c5",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4ce436c0-7646-41e2-8fd8-b10dc2faaaf7",
    "metadata": {},
    "outputs": [],
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8e52cf9f-31c2-4484-954d-50f8376b8a37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mass_target = 4e4 * u.solMass # \n",
-    "# mass_target = 1.e5 * u.solMass # \n",
+    "# mass_target = 4e4 * u.solMass #\n",
+    "# mass_target = 1.e5 * u.solMass #\n",
     "mass_target = 2e5 * u.solMass #\n",
     "# mass_target = 2.5e5 * u.solMass #\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dab87a7f-31f2-4501-9625-222921d0049d",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        " 'CO32': <Quantity 0.90430564 Jy km / s>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c05bf064-da82-4880-81ff-294f2de25a05",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        " 'CO32': <Quantity 0.57765602 K km / s>}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "518d18e1-5ce8-4c50-a154-62fd1313a7ad",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "<Quantity 0.80387838 Jy km / s>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c4787f78-ac30-4645-a14d-239a072f8262",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "<Quantity 4.0193919 Jy km / s>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f3b8f3cc-c6cd-4cc9-861d-a2569b718f40",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "<Quantity 1.15531203 K km / s>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "001b8626-110b-4443-8e9c-ea7d275182d5",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1afcd2d4-6a4d-42f7-b6c4-a3d68448334c",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "<Quantity 0.16077568 Jy>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "db7789a8-0c81-4998-a091-05f80b18229e",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "<Quantity 160.7756761 mJy>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "16922c6f-6327-443d-894c-97207a2a3c16",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "<Quantity 0.23106241 K>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "1cca5a64-ab89-4eda-b9a8-10aeb889929a",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "77bc3dc2-84e0-4e94-9720-569821eb6554",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "<Quantity 13.19178307 min>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "264137b0-5781-45f1-b3d0-ee7eb91314e9",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "<Quantity 6.98213744 min>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "84be4969-b9df-45bd-b1f2-7da27acd648e",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "<Quantity 17.10646531 min>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "fb8d2783-8602-4959-b2f1-f8643924915a",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "<Quantity 122.53825933 mJy>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "acfb70e6-0f63-4277-94be-87c53d37f008",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
        "<Quantity 76.53916793 mJy>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d0b2f227-1d72-421a-820d-e0ff1311ef27",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "<Quantity 2.09437621 mJy>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,11 +620,12 @@
    "source": [
     "def otf_mapping_params(row_length, row_width,\n",
     "                       theta_pb=55*u.arcsec,\n",
+    "                       oversample_row_space=2.,\n",
     "                       time_per_beam=1*u.min,\n",
     "                       t_dump=1.7 * u.s,\n",
     "                       beam_per_dump=0.1,\n",
-    "                       t_loop = 15 * u.min,\n",
-    "                       t_gain = 3 * u.min,\n",
+    "                       t_loop=15 * u.min,\n",
+    "                       t_gain=3 * u.min,\n",
     "                       time_per_track=time_onsource_calc,\n",
     "                       t_delay=3*u.s,\n",
     "                       t_row_delay=4*u.s,\n",
@@ -636,50 +637,54 @@
     "    print(R_target)\n",
     "\n",
     "    total_area = row_length * row_width\n",
-    "    \n",
+    "\n",
     "    beam_area = 0.5665 * theta_pb.to(u.arcmin).value**2 * u.arcmin**2\n",
-    "    \n",
+    "\n",
     "    N_eff = (total_area / beam_area).to(u.one)\n",
     "\n",
     "    time_all_beams = (N_eff * time_per_beam)\n",
     "\n",
-    "    theta_row = theta_pb / np.sqrt(2)\n",
+    "    theta_row = theta_pb / oversample_row_space\n",
     "\n",
     "    N_beam_row = (row_length / theta_pb).to(u.one)\n",
     "\n",
     "    # Add 1 to account for start/end integration per row (if we need it)\n",
     "    t_row = (row_length / R_target).to(u.min)\n",
-    "    \n",
-    "    Nrow = np.ceil((row_width / theta_row).to(u.one))\n",
-    "    \n",
+    "\n",
+    "    # Account for that total area coverage at ~full sensitivity. Thus, add 1 PB\n",
+    "    # to the overall width.\n",
+    "    Nrow = np.ceil(((row_width + theta_pb) / theta_row).to(u.one))\n",
+    "\n",
+    "    print((Nrow * theta_row).to(u.arcmin), row_width)\n",
+    "\n",
     "    # t_otf_map = Nrow * t_row\n",
     "\n",
     "    t_otf_map = t_delay + Nrow * (t_row + t_row_delay)\n",
-    "    \n",
+    "\n",
     "    N_otf_maps = (time_all_beams / t_otf_map).to(u.one)\n",
     "\n",
     "    # Add mapping overheads\n",
     "    # Overhead. Assume we need 1 gain cal scan per 15 min.\n",
-    "    N_gain = np.ceil((t_otf_map / (t_loop - t_gain)).to(u.one)) - 1\n",
+    "    N_gain = np.ceil((t_otf_map / (t_loop - t_gain)).to(u.one)) # - 1\n",
     "\n",
     "    t_otf_map_total = (t_otf_map + N_gain * t_gain).to(u.h)\n",
     "\n",
     "    t_total_mapping_time = N_otf_maps * t_otf_map_total\n",
     "\n",
     "    N_tracks = t_total_mapping_time / time_per_track\n",
-    "    \n",
+    "\n",
     "    maps_per_track = np.ceil(N_otf_maps) / N_tracks\n",
     "\n",
     "    out_dict = dict(row_length=row_length,\n",
     "                   row_width=row_width,\n",
-    "                  total_area=row_length*row_width,\n",
+    "                   total_area=row_length*row_width,\n",
     "                   beam_area=beam_area,\n",
     "                   N_eff=N_eff,\n",
     "                   time_all_beams=time_all_beams.to(u.hr),\n",
     "                   time_per_beam=time_per_beam,\n",
     "                   theta_row=theta_row,\n",
     "                   N_beam_row=N_beam_row,\n",
-    "                    R_target=R_target,\n",
+    "                   R_target=R_target,\n",
     "                   t_row=t_row,\n",
     "                   Nrow=Nrow,\n",
     "                   t_otf_map=t_otf_map.to(u.min),\n",
@@ -699,14 +704,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "12f44428-aada-4cb9-8ef5-e66b79ed670f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "id": "c62448cb-77fe-476d-b75c-5b6d1ba47198",
    "metadata": {},
@@ -717,6 +714,7 @@
      "text": [
       "5.0 arcmin 7.0 arcmin\n",
       "3.235294117647059 arcsec / s\n",
+      "8.25 arcmin 7.0 arcmin\n",
       "row_length 5.0 arcmin\n",
       "row_width 7.0 arcmin\n",
       "total_area 35.0 arcmin2\n",
@@ -724,18 +722,18 @@
       "N_eff 73.52673002997966\n",
       "time_all_beams 20.96304093992784 h\n",
       "time_per_beam 17.10646530700909 min\n",
-      "theta_row 38.89087296526011 arcsec\n",
+      "theta_row 27.5 arcsec\n",
       "N_beam_row 5.454545454545455\n",
       "R_target 3.235294117647059 arcsec / s\n",
       "t_row 1.5454545454545454 min\n",
-      "Nrow 11.0\n",
-      "t_otf_map 17.78333333333333 min\n",
-      "N_otf_maps 70.72816062206206\n",
-      "N_gain 1.0\n",
-      "t_otf_map_total 0.3213888888888889 h\n",
-      "t_total_mapping_time 22.73124495547939 h\n",
-      "N_tracks 2.559824882373805\n",
-      "maps_per_track 27.73627230865867\n"
+      "Nrow 18.0\n",
+      "t_otf_map 29.068181818181817 min\n",
+      "N_otf_maps 43.27007668601212\n",
+      "N_gain 3.0\n",
+      "t_otf_map_total 0.559469696969697 h\n",
+      "t_total_mapping_time 24.20829669137875 h\n",
+      "N_tracks 2.7261595373174266\n",
+      "maps_per_track 16.139921159308425\n"
      ]
     }
    ],
@@ -754,7 +752,7 @@
     "                       time_per_beam=time_on_source_needed,\n",
     "                       time_per_track=time_onsource_calc,\n",
     "                       # R_target=3*u.arcsec/u.s,\n",
-    "                       t_dump=1.7*u.s, \n",
+    "                       t_dump=1.7*u.s,\n",
     "                       t_loop=15 * u.min,\n",
     "                       t_gain=1.5 * u.min,\n",
     "                      )\n"
@@ -772,6 +770,7 @@
      "text": [
       "8.0 arcmin 8.0 arcmin\n",
       "3.235294117647059 arcsec / s\n",
+      "9.166666666666666 arcmin 8.0 arcmin\n",
       "row_length 8.0 arcmin\n",
       "row_width 8.0 arcmin\n",
       "total_area 64.0 arcmin2\n",
@@ -779,18 +778,18 @@
       "N_eff 134.44887776910568\n",
       "time_all_beams 38.332417718725196 h\n",
       "time_per_beam 17.10646530700909 min\n",
-      "theta_row 38.89087296526011 arcsec\n",
+      "theta_row 27.5 arcsec\n",
       "N_beam_row 8.727272727272727\n",
       "R_target 3.235294117647059 arcsec / s\n",
       "t_row 2.4727272727272727 min\n",
-      "Nrow 13.0\n",
-      "t_otf_map 33.06212121212121 min\n",
-      "N_otf_maps 69.56435276392088\n",
-      "N_gain 2.0\n",
-      "t_otf_map_total 0.6510353535353536 h\n",
-      "t_total_mapping_time 45.28885299511728 h\n",
-      "N_tracks 5.1000960580087025\n",
-      "maps_per_track 13.72523168266188\n"
+      "Nrow 20.0\n",
+      "t_otf_map 50.83787878787879 min\n",
+      "N_otf_maps 45.240775539043234\n",
+      "N_gain 5.0\n",
+      "t_otf_map_total 1.0972979797979798 h\n",
+      "t_total_mapping_time 49.642611603486 h\n",
+      "N_tracks 5.590384189581757\n",
+      "maps_per_track 8.228414799420339\n"
      ]
     }
    ],
@@ -809,7 +808,7 @@
     "                       time_per_beam=time_on_source_needed,\n",
     "                       time_per_track=time_onsource_calc,\n",
     "                       # R_target=3*u.arcsec/u.s,\n",
-    "                       t_dump=1.7*u.s, \n",
+    "                       t_dump=1.7*u.s,\n",
     "                       t_loop=15 * u.min,\n",
     "                       t_gain=3 * u.min,\n",
     "                      )\n"
@@ -817,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "971e7242-0884-43d4-ba76-02dfbf174b9f",
    "metadata": {},
    "outputs": [
@@ -826,7 +825,8 @@
      "output_type": "stream",
      "text": [
       "9.0 arcmin 9.0 arcmin\n",
-      "3.235294117647059 arcsec / s\n",
+      "8.873333333333333 arcsec / s\n",
+      "10.083333333333334 arcmin 9.0 arcmin\n",
       "row_length 9.0 arcmin\n",
       "row_width 9.0 arcmin\n",
       "total_area 81.0 arcmin2\n",
@@ -834,18 +834,19 @@
       "N_eff 170.16186092652435\n",
       "time_all_beams 48.51446617526157 h\n",
       "time_per_beam 17.10646530700909 min\n",
-      "theta_row 38.89087296526011 arcsec\n",
+      "theta_row 27.5 arcsec\n",
       "N_beam_row 9.818181818181818\n",
-      "R_target 3.235294117647059 arcsec / s\n",
-      "t_row 2.7818181818181817 min\n",
-      "Nrow 14.0\n",
-      "t_otf_map 39.92878787878788 min\n",
-      "N_otf_maps 72.90148599933055\n",
-      "N_gain 3.0\n",
-      "t_otf_map_total 0.8154797979797981 h\n",
-      "t_total_mapping_time 59.44968907516115 h\n",
-      "N_tracks 6.69478480576139\n",
-      "maps_per_track 10.90400992981548\n"
+      "R_target 8.873333333333333 arcsec / s\n",
+      "t_row 1.0142749812171301 min\n",
+      "Nrow 22.0\n",
+      "t_otf_map 23.83071625344353 min\n",
+      "N_otf_maps 122.14773318427116\n",
+      "N_gain 2.0\n",
+      "t_otf_map_total 0.4971786042240588 h\n",
+      "t_total_mapping_time 60.72923949368869 h\n",
+      "N_tracks 6.838878321361338\n",
+      "maps_per_track 17.985405532923092\n",
+      "11.915358126721765 min\n"
      ]
     }
    ],
@@ -863,16 +864,18 @@
     "                       theta_pb=55*u.arcsec,\n",
     "                       time_per_beam=time_on_source_needed,\n",
     "                       time_per_track=time_onsource_calc,\n",
-    "                       # R_target=3*u.arcsec/u.s,\n",
-    "                       t_dump=1.7*u.s,\n",
+    "                       beam_per_dump=0.121,\n",
+    "                       t_dump=0.75*u.s,\n",
     "                       t_loop=15 * u.min,\n",
     "                       t_gain=3 * u.min,\n",
-    "                      )\n"
+    "                      )\n",
+    "\n",
+    "print(ic342_whole_otf['t_otf_map']/2.)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "7e8ad6e4-df8f-4ca5-954a-80e60b65fd00",
    "metadata": {},
    "outputs": [
@@ -881,7 +884,8 @@
      "output_type": "stream",
      "text": [
       "8.0 arcmin 7.0 arcmin\n",
-      "3.7812500000000004 arcsec / s\n",
+      "6.875 arcsec / s\n",
+      "8.25 arcmin 7.0 arcmin\n",
       "row_length 8.0 arcmin\n",
       "row_width 7.0 arcmin\n",
       "total_area 56.0 arcmin2\n",
@@ -889,25 +893,23 @@
       "N_eff 117.64276804796745\n",
       "time_all_beams 33.54086550388454 h\n",
       "time_per_beam 17.10646530700909 min\n",
-      "theta_row 38.89087296526011 arcsec\n",
+      "theta_row 27.5 arcsec\n",
       "N_beam_row 8.727272727272727\n",
-      "R_target 3.7812500000000004 arcsec / s\n",
-      "t_row 2.1157024793388426 min\n",
-      "Nrow 11.0\n",
-      "t_otf_map 24.056060606060605 min\n",
-      "N_otf_maps 83.65675341398425\n",
+      "R_target 6.875 arcsec / s\n",
+      "t_row 1.1636363636363636 min\n",
+      "Nrow 18.0\n",
+      "t_otf_map 22.195454545454545 min\n",
+      "N_otf_maps 90.66955245776694\n",
       "N_gain 2.0\n",
-      "t_otf_map_total 0.5009343434343434 h\n",
-      "t_total_mapping_time 41.90654084528296 h\n",
-      "N_tracks 4.7192050501444776\n",
-      "maps_per_track 17.79960800758771\n",
-      "12.028030303030302 min\n"
+      "t_otf_map_total 0.4699242424242424 h\n",
+      "t_total_mapping_time 42.60782074966124 h\n",
+      "N_tracks 4.798178012349238\n",
+      "maps_per_track 18.9655322845026\n",
+      "11.097727272727273 min\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# IC342\n",
     "row_length = 8 * u.arcmin\n",
     "row_width = 7 * u.arcmin\n",
@@ -919,9 +921,8 @@
     "                       theta_pb=55*u.arcsec,\n",
     "                       time_per_beam=time_on_source_needed,\n",
     "                       time_per_track=time_onsource_calc,\n",
-    "                       # R_target=3*u.arcsec/u.s,\n",
-    "                       t_dump=1.2*u.s,\n",
-    "                       beam_per_dump=0.0825,\n",
+    "                       t_dump=1.0*u.s,\n",
+    "                       beam_per_dump=0.125,\n",
     "                       t_loop=15 * u.min,\n",
     "                       t_gain=3 * u.min,\n",
     "                      )\n",
@@ -940,7 +941,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py39",
    "language": "python",
    "name": "python3"
   },
@@ -954,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
