Add mapping time for 10x10 arcmin^2

--- a/ic342_mass_sensitivity_calcs.ipynb
+++ b/ic342_mass_sensitivity_calcs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c40a193c-c1e6-45d1-ab26-750fe3383b42",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "365cbf4a-196e-413b-9ac7-d6a18d6834c5",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4ce436c0-7646-41e2-8fd8-b10dc2faaaf7",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8e52cf9f-31c2-4484-954d-50f8376b8a37",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dab87a7f-31f2-4501-9625-222921d0049d",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        " 'CO32': <Quantity 0.90430564 Jy km / s>}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c05bf064-da82-4880-81ff-294f2de25a05",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        " 'CO32': <Quantity 0.57765602 K km / s>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "518d18e1-5ce8-4c50-a154-62fd1313a7ad",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "<Quantity 0.80387838 Jy km / s>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c4787f78-ac30-4645-a14d-239a072f8262",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "<Quantity 4.0193919 Jy km / s>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f3b8f3cc-c6cd-4cc9-861d-a2569b718f40",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "<Quantity 1.15531203 K km / s>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "001b8626-110b-4443-8e9c-ea7d275182d5",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1afcd2d4-6a4d-42f7-b6c4-a3d68448334c",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "<Quantity 0.16077568 Jy>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "db7789a8-0c81-4998-a091-05f80b18229e",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "<Quantity 160.7756761 mJy>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "16922c6f-6327-443d-894c-97207a2a3c16",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "<Quantity 0.23106241 K>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "1cca5a64-ab89-4eda-b9a8-10aeb889929a",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "77bc3dc2-84e0-4e94-9720-569821eb6554",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "<Quantity 13.19178307 min>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "264137b0-5781-45f1-b3d0-ee7eb91314e9",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "<Quantity 6.98213744 min>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "84be4969-b9df-45bd-b1f2-7da27acd648e",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "<Quantity 17.10646531 min>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "fb8d2783-8602-4959-b2f1-f8643924915a",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "<Quantity 122.53825933 mJy>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "acfb70e6-0f63-4277-94be-87c53d37f008",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
        "<Quantity 76.53916793 mJy>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "d0b2f227-1d72-421a-820d-e0ff1311ef27",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "<Quantity 2.09437621 mJy>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "971e7242-0884-43d4-ba76-02dfbf174b9f",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "7e8ad6e4-df8f-4ca5-954a-80e60b65fd00",
    "metadata": {},
    "outputs": [
@@ -932,8 +932,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "adc7477c-3f63-40c2-8b97-bafc5e59fe9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0 arcmin 10.0 arcmin\n",
+      "11.0 arcsec / s\n",
+      "11.0 arcmin 10.0 arcmin\n",
+      "row_length 10.0 arcmin\n",
+      "row_width 10.0 arcmin\n",
+      "total_area 100.0 arcmin2\n",
+      "beam_area 0.47601736111111104 arcmin2\n",
+      "N_eff 210.0763715142276\n",
+      "time_all_beams 59.89440268550811 h\n",
+      "time_per_beam 17.10646530700909 min\n",
+      "theta_row 27.5 arcsec\n",
+      "N_beam_row 10.90909090909091\n",
+      "R_target 11.0 arcsec / s\n",
+      "t_row 0.9090909090909091 min\n",
+      "Nrow 24.0\n",
+      "t_otf_map 23.468181818181815 min\n",
+      "N_otf_maps 153.12921081710383\n",
+      "N_gain 2.0\n",
+      "t_otf_map_total 0.4911363636363636 h\n",
+      "t_total_mapping_time 75.20732376721848 h\n",
+      "N_tracks 8.469293217029108\n",
+      "maps_per_track 18.183335498451513\n",
+      "11.734090909090908 min\n",
+      "Total time on source: 60.16585901377479 h\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# IC342\n",
+    "row_length = 10 * u.arcmin\n",
+    "row_width = 10 * u.arcmin\n",
+    "\n",
+    "total_area = row_width * row_length\n",
+    "\n",
+    "print(row_length, row_width)\n",
+    "ic342_whole_otf = otf_mapping_params(row_length, row_width,\n",
+    "                       theta_pb=55*u.arcsec,\n",
+    "                       time_per_beam=time_on_source_needed,\n",
+    "                       time_per_track=time_onsource_calc,\n",
+    "                       beam_per_dump=0.12,\n",
+    "                       t_dump=0.6*u.s,\n",
+    "                       t_loop=15 * u.min,\n",
+    "                       t_gain=3 * u.min,\n",
+    "                      )\n",
+    "\n",
+    "print(ic342_whole_otf['t_otf_map']/2.)\n",
+    "\n",
+    "total_time_on_source = ic342_whole_otf['t_total_mapping_time'] * (12 / 15.)\n",
+    "print(f\"Total time on source: {total_time_on_source}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aade50c",
    "metadata": {},
    "outputs": [],
    "source": []
