--- a/ic342_mass_sensitivity_calcs.ipynb
+++ b/ic342_mass_sensitivity_calcs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c40a193c-c1e6-45d1-ab26-750fe3383b42",
    "metadata": {},
    "outputs": [],
@@ -20,17 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "365cbf4a-196e-413b-9ac7-d6a18d6834c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run sensitivity_time_functions.py"
+    "%run sensitivity_time_functions.py\n",
+    "%run otf_map_functions.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4ce436c0-7646-41e2-8fd8-b10dc2faaaf7",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "8e52cf9f-31c2-4484-954d-50f8376b8a37",
    "metadata": {},
    "outputs": [],
@@ -55,15 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f76d760-ca22-4d28-a544-b45286ffca41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "dab87a7f-31f2-4501-9625-222921d0049d",
    "metadata": {},
    "outputs": [
@@ -75,7 +68,7 @@
        " 'CO32': <Quantity 0.90430564 Jy km / s>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "c05bf064-da82-4880-81ff-294f2de25a05",
    "metadata": {},
    "outputs": [
@@ -108,7 +101,7 @@
        " 'CO32': <Quantity 0.57765602 K km / s>}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "518d18e1-5ce8-4c50-a154-62fd1313a7ad",
    "metadata": {},
    "outputs": [
@@ -142,7 +135,7 @@
        "<Quantity 0.80387838 Jy km / s>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "c4787f78-ac30-4645-a14d-239a072f8262",
    "metadata": {},
    "outputs": [
@@ -168,7 +161,7 @@
        "<Quantity 4.0193919 Jy km / s>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "f3b8f3cc-c6cd-4cc9-861d-a2569b718f40",
    "metadata": {},
    "outputs": [
@@ -192,7 +185,7 @@
        "<Quantity 1.15531203 K km / s>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "001b8626-110b-4443-8e9c-ea7d275182d5",
    "metadata": {},
    "outputs": [],
@@ -215,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "1afcd2d4-6a4d-42f7-b6c4-a3d68448334c",
    "metadata": {},
    "outputs": [
@@ -228,7 +221,7 @@
        "<Quantity 0.16077568 Jy>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "db7789a8-0c81-4998-a091-05f80b18229e",
    "metadata": {},
    "outputs": [
@@ -254,7 +247,7 @@
        "<Quantity 160.7756761 mJy>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "16922c6f-6327-443d-894c-97207a2a3c16",
    "metadata": {},
    "outputs": [
@@ -278,7 +271,7 @@
        "<Quantity 0.23106241 K>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "1cca5a64-ab89-4eda-b9a8-10aeb889929a",
    "metadata": {},
    "outputs": [],
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "77bc3dc2-84e0-4e94-9720-569821eb6554",
    "metadata": {},
    "outputs": [
@@ -343,7 +336,7 @@
        "<Quantity 13.19178307 min>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "264137b0-5781-45f1-b3d0-ee7eb91314e9",
    "metadata": {},
    "outputs": [
@@ -384,7 +377,7 @@
        "<Quantity 6.98213744 min>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "84be4969-b9df-45bd-b1f2-7da27acd648e",
    "metadata": {},
    "outputs": [
@@ -446,7 +439,7 @@
        "<Quantity 17.10646531 min>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "fb8d2783-8602-4959-b2f1-f8643924915a",
    "metadata": {},
    "outputs": [
@@ -495,7 +488,7 @@
        "<Quantity 122.53825933 mJy>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "acfb70e6-0f63-4277-94be-87c53d37f008",
    "metadata": {},
    "outputs": [
@@ -535,7 +528,7 @@
        "<Quantity 76.53916793 mJy>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "d0b2f227-1d72-421a-820d-e0ff1311ef27",
    "metadata": {},
    "outputs": [
@@ -575,7 +568,7 @@
        "<Quantity 2.09437621 mJy>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,98 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3b527e08-249f-42a3-8e50-2af97d8fc565",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def otf_mapping_params(row_length, row_width,\n",
-    "                       theta_pb=55*u.arcsec,\n",
-    "                       oversample_row_space=2.,\n",
-    "                       time_per_beam=1*u.min,\n",
-    "                       t_dump=1.7 * u.s,\n",
-    "                       beam_per_dump=0.1,\n",
-    "                       t_loop=15 * u.min,\n",
-    "                       t_gain=3 * u.min,\n",
-    "                       time_per_track=time_onsource_calc,\n",
-    "                       t_delay=3*u.s,\n",
-    "                       t_row_delay=4*u.s,\n",
-    "                       verbose=True,\n",
-    "                      ):\n",
-    "\n",
-    "    # R_target=3*u.arcsec/u.s,\n",
-    "    R_target = theta_pb * beam_per_dump / t_dump\n",
-    "    print(R_target)\n",
-    "\n",
-    "    total_area = row_length * row_width\n",
-    "\n",
-    "    beam_area = 0.5665 * theta_pb.to(u.arcmin).value**2 * u.arcmin**2\n",
-    "\n",
-    "    N_eff = (total_area / beam_area).to(u.one)\n",
-    "\n",
-    "    time_all_beams = (N_eff * time_per_beam)\n",
-    "\n",
-    "    theta_row = theta_pb / oversample_row_space\n",
-    "\n",
-    "    N_beam_row = (row_length / theta_pb).to(u.one)\n",
-    "\n",
-    "    # Add 1 to account for start/end integration per row (if we need it)\n",
-    "    t_row = (row_length / R_target).to(u.min)\n",
-    "\n",
-    "    # Account for that total area coverage at ~full sensitivity. Thus, add 1 PB\n",
-    "    # to the overall width.\n",
-    "    Nrow = np.ceil(((row_width + theta_pb) / theta_row).to(u.one))\n",
-    "\n",
-    "    print((Nrow * theta_row).to(u.arcmin), row_width)\n",
-    "\n",
-    "    # t_otf_map = Nrow * t_row\n",
-    "\n",
-    "    t_otf_map = t_delay + Nrow * (t_row + t_row_delay)\n",
-    "\n",
-    "    N_otf_maps = (time_all_beams / t_otf_map).to(u.one)\n",
-    "\n",
-    "    # Add mapping overheads\n",
-    "    # Overhead. Assume we need 1 gain cal scan per 15 min.\n",
-    "    N_gain = np.ceil((t_otf_map / (t_loop - t_gain)).to(u.one)) # - 1\n",
-    "\n",
-    "    t_otf_map_total = (t_otf_map + N_gain * t_gain).to(u.h)\n",
-    "\n",
-    "    t_total_mapping_time = N_otf_maps * t_otf_map_total\n",
-    "\n",
-    "    N_tracks = t_total_mapping_time / time_per_track\n",
-    "\n",
-    "    maps_per_track = np.ceil(N_otf_maps) / N_tracks\n",
-    "\n",
-    "    out_dict = dict(row_length=row_length,\n",
-    "                   row_width=row_width,\n",
-    "                   total_area=row_length*row_width,\n",
-    "                   beam_area=beam_area,\n",
-    "                   N_eff=N_eff,\n",
-    "                   time_all_beams=time_all_beams.to(u.hr),\n",
-    "                   time_per_beam=time_per_beam,\n",
-    "                   theta_row=theta_row,\n",
-    "                   N_beam_row=N_beam_row,\n",
-    "                   R_target=R_target,\n",
-    "                   t_row=t_row,\n",
-    "                   Nrow=Nrow,\n",
-    "                   t_otf_map=t_otf_map.to(u.min),\n",
-    "                   N_otf_maps=N_otf_maps,\n",
-    "                   N_gain=N_gain,\n",
-    "                   t_otf_map_total=t_otf_map_total.to(u.hr),\n",
-    "                   t_total_mapping_time=t_total_mapping_time.to(u.hr),\n",
-    "                   N_tracks=N_tracks,\n",
-    "                   maps_per_track=maps_per_track)\n",
-    "\n",
-    "    if verbose:\n",
-    "        for key in out_dict:\n",
-    "            print(key, out_dict[key])\n",
-    "\n",
-    "    return out_dict\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "c62448cb-77fe-476d-b75c-5b6d1ba47198",
    "metadata": {},
    "outputs": [
@@ -713,8 +615,6 @@
      "output_type": "stream",
      "text": [
       "5.0 arcmin 7.0 arcmin\n",
-      "3.235294117647059 arcsec / s\n",
-      "8.25 arcmin 7.0 arcmin\n",
       "row_length 5.0 arcmin\n",
       "row_width 7.0 arcmin\n",
       "total_area 35.0 arcmin2\n",
@@ -727,13 +627,21 @@
       "R_target 3.235294117647059 arcsec / s\n",
       "t_row 1.5454545454545454 min\n",
       "Nrow 18.0\n",
-      "t_otf_map 29.068181818181817 min\n",
-      "N_otf_maps 43.27007668601212\n",
+      "t_otf_map 29.36818181818182 min\n",
+      "N_otf_maps 42.82806692571544\n",
       "N_gain 3.0\n",
-      "t_otf_map_total 0.559469696969697 h\n",
-      "t_total_mapping_time 24.20829669137875 h\n",
-      "N_tracks 2.7261595373174266\n",
-      "maps_per_track 16.139921159308425\n"
+      "t_otf_map_total 0.564469696969697 h\n",
+      "t_total_mapping_time 24.175145959356495 h\n",
+      "N_tracks 2.72242634677438\n",
+      "maps_per_track 15.79473400665102\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Volumes/Cloud/.CloudStorage/Data/Dropbox/observing_code/SMA/sma-otf-scripts/otf_map_functions.py:109: UserWarning: t_gain < 3min. Recomended minimum value is 3min.\n",
+      "  warn('t_gain < 3min. Recomended minimum value is 3min.')\n"
      ]
     }
    ],
@@ -760,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "78555415-6857-4773-9c47-efd0ab0a920f",
    "metadata": {},
    "outputs": [
@@ -769,8 +677,6 @@
      "output_type": "stream",
      "text": [
       "8.0 arcmin 8.0 arcmin\n",
-      "3.235294117647059 arcsec / s\n",
-      "9.166666666666666 arcmin 8.0 arcmin\n",
       "row_length 8.0 arcmin\n",
       "row_width 8.0 arcmin\n",
       "total_area 64.0 arcmin2\n",
@@ -783,13 +689,13 @@
       "R_target 3.235294117647059 arcsec / s\n",
       "t_row 2.4727272727272727 min\n",
       "Nrow 20.0\n",
-      "t_otf_map 50.83787878787879 min\n",
-      "N_otf_maps 45.240775539043234\n",
+      "t_otf_map 51.17121212121211 min\n",
+      "N_otf_maps 44.94607353985486\n",
       "N_gain 5.0\n",
-      "t_otf_map_total 1.0972979797979798 h\n",
-      "t_total_mapping_time 49.642611603486 h\n",
-      "N_tracks 5.590384189581757\n",
-      "maps_per_track 8.228414799420339\n"
+      "t_otf_map_total 1.1028535353535351 h\n",
+      "t_total_mapping_time 49.56893610368891 h\n",
+      "N_tracks 5.582087399064066\n",
+      "maps_per_track 8.061500435759038\n"
      ]
     }
    ],
@@ -816,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "971e7242-0884-43d4-ba76-02dfbf174b9f",
    "metadata": {},
    "outputs": [
@@ -825,8 +731,6 @@
      "output_type": "stream",
      "text": [
       "9.0 arcmin 9.0 arcmin\n",
-      "8.873333333333333 arcsec / s\n",
-      "10.083333333333334 arcmin 9.0 arcmin\n",
       "row_length 9.0 arcmin\n",
       "row_width 9.0 arcmin\n",
       "total_area 81.0 arcmin2\n",
@@ -839,14 +743,14 @@
       "R_target 8.873333333333333 arcsec / s\n",
       "t_row 1.0142749812171301 min\n",
       "Nrow 22.0\n",
-      "t_otf_map 23.83071625344353 min\n",
-      "N_otf_maps 122.14773318427116\n",
-      "N_gain 2.0\n",
-      "t_otf_map_total 0.4971786042240588 h\n",
-      "t_total_mapping_time 60.72923949368869 h\n",
-      "N_tracks 6.838878321361338\n",
-      "maps_per_track 17.985405532923092\n",
-      "11.915358126721765 min\n"
+      "t_otf_map 24.1973829201102 min\n",
+      "N_otf_maps 120.29680978832226\n",
+      "N_gain 3.0\n",
+      "t_otf_map_total 0.55328971533517 h\n",
+      "t_total_mapping_time 66.55898764350992 h\n",
+      "N_tracks 7.495381491386252\n",
+      "maps_per_track 16.14327438023723\n",
+      "12.0986914600551 min\n"
      ]
     }
    ],
@@ -875,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "7e8ad6e4-df8f-4ca5-954a-80e60b65fd00",
    "metadata": {},
    "outputs": [
@@ -884,8 +788,6 @@
      "output_type": "stream",
      "text": [
       "8.0 arcmin 7.0 arcmin\n",
-      "6.875 arcsec / s\n",
-      "8.25 arcmin 7.0 arcmin\n",
       "row_length 8.0 arcmin\n",
       "row_width 7.0 arcmin\n",
       "total_area 56.0 arcmin2\n",
@@ -898,14 +800,14 @@
       "R_target 6.875 arcsec / s\n",
       "t_row 1.1636363636363636 min\n",
       "Nrow 18.0\n",
-      "t_otf_map 22.195454545454545 min\n",
-      "N_otf_maps 90.66955245776694\n",
+      "t_otf_map 22.495454545454546 min\n",
+      "N_otf_maps 89.46038081456375\n",
       "N_gain 2.0\n",
-      "t_otf_map_total 0.4699242424242424 h\n",
-      "t_total_mapping_time 42.60782074966124 h\n",
-      "N_tracks 4.798178012349238\n",
-      "maps_per_track 18.9655322845026\n",
-      "11.097727272727273 min\n"
+      "t_otf_map_total 0.4749242424242424 h\n",
+      "t_total_mapping_time 42.48690358534092 h\n",
+      "N_tracks 4.784561214565418\n",
+      "maps_per_track 18.81050235620712\n",
+      "11.247727272727273 min\n"
      ]
     }
    ],
@@ -932,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "adc7477c-3f63-40c2-8b97-bafc5e59fe9b",
    "metadata": {},
    "outputs": [
@@ -941,8 +843,6 @@
      "output_type": "stream",
      "text": [
       "10.0 arcmin 10.0 arcmin\n",
-      "11.0 arcsec / s\n",
-      "11.0 arcmin 10.0 arcmin\n",
       "row_length 10.0 arcmin\n",
       "row_width 10.0 arcmin\n",
       "total_area 100.0 arcmin2\n",
@@ -952,18 +852,18 @@
       "time_per_beam 17.10646530700909 min\n",
       "theta_row 27.5 arcsec\n",
       "N_beam_row 10.90909090909091\n",
-      "R_target 11.0 arcsec / s\n",
-      "t_row 0.9090909090909091 min\n",
+      "R_target 7.638888888888888 arcsec / s\n",
+      "t_row 1.309090909090909 min\n",
       "Nrow 24.0\n",
-      "t_otf_map 23.468181818181815 min\n",
-      "N_otf_maps 153.12921081710383\n",
-      "N_gain 2.0\n",
-      "t_otf_map_total 0.4911363636363636 h\n",
-      "t_total_mapping_time 75.20732376721848 h\n",
-      "N_tracks 8.469293217029108\n",
-      "maps_per_track 18.183335498451513\n",
-      "11.734090909090908 min\n",
-      "Total time on source: 60.16585901377479 h\n"
+      "t_otf_map 33.46818181818182 min\n",
+      "N_otf_maps 107.37554195962339\n",
+      "N_gain 3.0\n",
+      "t_otf_map_total 0.7078030303030303 h\n",
+      "t_total_mapping_time 76.00073397945161 h\n",
+      "N_tracks 8.558641213902208\n",
+      "maps_per_track 12.618825500544464\n",
+      "Half map time: 16.73409090909091 min\n",
+      "Total time on source: 60.80058718356129 h\n"
      ]
     }
    ],
@@ -981,30 +881,22 @@
     "                       theta_pb=55*u.arcsec,\n",
     "                       time_per_beam=time_on_source_needed,\n",
     "                       time_per_track=time_onsource_calc,\n",
-    "                       beam_per_dump=0.12,\n",
-    "                       t_dump=0.6*u.s,\n",
+    "                       beam_per_dump=0.125,\n",
+    "                       t_dump=0.9*u.s,\n",
     "                       t_loop=15 * u.min,\n",
     "                       t_gain=3 * u.min,\n",
     "                      )\n",
     "\n",
-    "print(ic342_whole_otf['t_otf_map']/2.)\n",
+    "print(f\"Half map time: {ic342_whole_otf['t_otf_map']/2.}\")\n",
     "\n",
     "total_time_on_source = ic342_whole_otf['t_total_mapping_time'] * (12 / 15.)\n",
     "print(f\"Total time on source: {total_time_on_source}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aade50c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1018,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
